<resources>
    <string name="app_name">LINC</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="PROFILE">PROFILE</string>
    <string name="school_calendar">SCHOOL CALENDAR</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="school_information">SCHOOL INFORMATION</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="notice_board">NOTICE BOARD</string>
    <string name="notice">NOTICE</string>
    <string name="notice_boardS">Notice Board</string>
    <string name="username">Username</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="my_performance">MY PERFORMANCE</string>
    <string name="SCHOOL">SCHOOL</string>
    <string name="attendance">Attendance</string>
    <string name="privacy_statement">PRIVACY STATEMENT</string>
    <string name="rate_us_amp_feedback"><![CDATA[RATE US & FEEDBACK]]></string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="validEmail"> Please enter a valid email</string>
    <string name="validPassword">Please enter password</string>
    <string name="validPwdLength">You must have 8 characters in your password</string>
    <string name="Failed">Failed</string>
    <string name="SessionValidation">Session expired, please login to continue</string>
    <string name="LogInFailed">These credentials are not match with our records.</string>
    <string name="ErrorMsg">Something went wrong</string>
    <string name="imgBasrUrl">https://lincapp.cherrydemoserver10.com/storage/</string>
    <string name="NoticeNotAvailable">No notice available</string>
    <string name="SchoolCalendarnotavailable">School Calendar not available</string>
    <string name="not_available">Not available</string>
    <string name="Section">Section:</string>
    <string name="YearLevel">Year/Level:</string>
    <string name="AbsentDays">Absent Days</string>
    <string name="PresentDays">Present Days</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="update">UPDATE</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="from">From : </string>
    <string name="to">To : </string>
    <string name="new_group_name">New Group Name</string>
    <string name="enter_here">Enter here</string>
    <string name="add">Add</string>
    <string name="chat">CHAT</string>
    <string name="group_name_validation">Please enter a group name</string>
    <string name="parent">Parent</string>
    <string name="student">Student</string>


</resources>
