<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.NoticreBoardDetailsFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="18dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtCurrentPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:hint="@string/current_password"
            android:layout_marginTop="120dp"
            android:background="@drawable/curved_rect_white_bg"/>
        <EditText
            android:id="@+id/edtNewPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginTop="18dp"
            android:hint="@string/new_password"
            android:background="@drawable/curved_rect_white_bg"/>
        <EditText
            android:id="@+id/edtCnfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginTop="18dp"
            android:hint="@string/confirm_password"
            android:background="@drawable/curved_rect_white_bg"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnCardLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="@color/colorGreen"
            app:cardCornerRadius="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="12dp"
                android:text="@string/update"
                android:textColor="@color/colorWhite" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>