<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOrange"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtDilgHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_group_name"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtGroupName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:background="@drawable/curved_rect_gray_bg"
                android:gravity="center"
                android:hint="@string/enter_here"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/curved_rect_green_bg"
                android:textColor="@color/colorWhite"
                android:padding="10dp"
                android:text="@string/add"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>