<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.NoticreBoardDetailsFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="22dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameProfile"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:src="@drawable/parent" />
                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:orientation="vertical"
                    android:layout_marginBottom="22dp"
                    android:layout_marginLeft="46dp"
                    android:layout_gravity="center|bottom"
                    android:gravity="center"
                    android:background="@drawable/circle">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/camera"/>
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="18dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingLeft="8dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/curved_rect_white_bg"
                    android:hint="@string/name"/>
                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingLeft="6dp"
                    android:inputType="number"
                    android:maxLength="13"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/curved_rect_white_bg"
                    android:hint="@string/phone"/>
                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingLeft="6dp"
                    android:editable="false"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/curved_rect_white_bg"
                    android:hint="@string/email"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnCardLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    app:cardBackgroundColor="@color/colorGreen"
                    app:cardCornerRadius="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="12dp"
                        android:text="@string/update"
                        android:textColor="@color/colorWhite" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/progressdilog_avi"/>
</FrameLayout>