<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LogInActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="18dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:cardElevation="10dp"
            card_view:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/curved_rect_trans_bg"
                    android:hint="@string/username"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colortext"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/edtPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/curved_rect_trans_bg"
                    android:hint="@string/password"
                    android:textColor="@color/colorBlack"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/colortext"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:singleLine="true" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnCardLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    app:cardBackgroundColor="@color/colorGreen"
                    app:cardCornerRadius="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="12dp"
                        android:text="@string/log_in"
                        android:textColor="@color/colorWhite" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="22dp"
                    android:background="@color/colorWhiteTrans"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="22dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/logInSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:checked="true"
                        android:theme="@style/SCBSwitch" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:gravity="center"
                        android:text="Remember Log-in"
                        android:textColor="@color/colortext" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <include layout="@layout/progressdilog_avi"/>

</FrameLayout>